--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
-<html>
-<head>
-  <title>React CnS</title>
-  <link rel="stylesheet" type="text/css" href="dist/style.css"/>
-</head>
-<body>
-  <div id="app-container"></div>
-  <script src="dist/app.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TodoMVC with React and Cream &amp; Sugar</title>
+    <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
+    <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+    <!-- CSS overrides - remove if you don't need it -->
+    <link rel="stylesheet" href="css/app.css">
+  </head>
+  <body>
+    <section id="app"></section>
+    <!-- Scripts here. Don't remove ↓ -->
+    <script src="node_modules/todomvc-common/base.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
